03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 01-application-deployment
  namespace: 01-application-ns
spec:
  selector:
    matchLabels:
      app: 01-application
  replicas: 3
  template:
    metadata:
      labels:
        app: 01-application
    spec:
      containers:
        - name: 01-application
          image: docker.io/konansakh11/01-application:1.0.0
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "kill -0 1"
          ports:
            - containerPort: 8000
              protocol: TCP
      imagePullSecrets:
      - name: docker-hub-secret
