03-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-01-application
  namespace: 01-application-ns
  labels:
    cluster_ip: 01-application-service
spec:
  type: ClusterIP
  selector:
    app: 01-application
  ports:
    - port: 8081
      targetPort: 8000
      protocol: TCP
